#ag-32 #ag-33 admin weeztix stying

--- a/public/assets/css/admin-layout.css
+++ b/public/assets/css/admin-layout.css
@@ -57,7 +57,9 @@
     }
     .container {
         .wrapper {
+            text-align: center;
             h2 {
+                font-weight: 700;
                 font-size: revert;
             }
             .button-wrapper {
