--- a/public/assets/css/swiper.css
+++ b/public/assets/css/swiper.css
@@ -6,12 +6,39 @@
     margin-bottom: 40px;
     border-radius: 25px;
     .swiper-button-prev, .swiper-button-next {
-        height: 100%;
-        top: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 40px;
+        height: 40px;
+        background-color: var(--default-black);
+        border-radius: 6px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 8px;
+        transition: background-color 0.3s ease;
+
         &:after {
-            color: var(--default-black);
+            font-size: 20px;
+            color: var(--default-white);
+        }
+
+        &:hover {
+            background-color: #333;
         }
     }
+
+    .swiper-button-prev {
+        left: 10px;
+    }
+
+    .swiper-button-next {
+        right: 10px;
+    }
+
+
+
+
     .swiper-slide {
         display: flex;
         margin: auto;
