#ag-114 fixed mobile view

--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -44,6 +44,12 @@
     .mb-4 {
         width: 100%;
     }
+    button a.button {
+        &.item-button {
+            width: 100%;
+            text-align: center;
+        }
+    }
 }
 
 .events {
