--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -24,15 +24,18 @@
         }
     }
     .navbar-nav {
+        width: 100%;
+        justify-content: space-between;
         .nav-item {
             transition: 0.3s;
             position: relative;
             .nav-link {
                 color: var(--default-white) !important;
-                font-weight: bold;
+                font-weight: 700;
                 opacity: 0.8;
                 transition: opacity .3s ease, transform .3s ease;
                 white-space: nowrap;
+                font-size: 16px;
 
                 span {
                     width: 30px;
@@ -110,6 +113,12 @@
     }
 }
 
+@media only screen and (max-width: 1500px) {
+    .navbar {
+        max-width: 80%;
+    }
+}
+
 @media only screen and (max-width: 1200px) {
     .navbar {
         max-width: 20%;
@@ -160,10 +169,12 @@
         }
         .navbar-collapse {
             overflow-y: auto;
+            overflow-x: hidden;
             position: fixed;
             top: 0;
             left: 0;
-            width: 60vw;
+            max-width: 60vw;
+            width: 100%;
             height: 100vh;
             background-color: var(--default-white);
             z-index: 999;
@@ -181,6 +192,8 @@
                 flex-direction: column;
                 align-items: center;
                 gap: 1.5em;
+                justify-content: center;
+
                 .nav-item {
                     .nav-link {
                         text-align: center;
@@ -240,6 +253,32 @@
                                 display: inline-grid;
                                 transform: scale(1) translate(0, 0);
                             }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .navbar-collapse.show {
+        padding: 40px 0;
+        .navbar-nav {
+            padding: 30px 0;
+            .nav-item {
+                padding: 0 20px;
+                span {
+                    width: fit-content;
+                    height: auto;
+                    background: none;
+                    display: block;
+                    &.home {
+                        &.home::before {
+                            content: 'Home';
+                            display: inline-block;
+                            font-size: 16px;
+                            color: inherit;
                         }
                     }
                 }
