--- a/public/assets/css/calender.css
+++ b/public/assets/css/calender.css
@@ -21,6 +21,13 @@
     .sidebar {
         position: relative;
         max-width: 400px;
+
+        p{
+            font-size: 18px;
+            line-height: 1.3;
+            margin-top: 1em;
+        }
+
         .button.item-button, button.item-button {
             width: 100%;
             text-align: center;
@@ -44,7 +51,7 @@
         background-color: var(--default-button-color);
         padding: 5px 13px;
         border-radius: 50%;
-        font-weight: 700;
+        font-weight: 500;
         right: 40px;
         top: 40px;
         .tooltiptext {
@@ -60,27 +67,14 @@
             top: -5px;
             right: 105%;
             font-size: 16px;
+
+            strong{
+                font-weight: 1000;
+            }
         }
         &:hover {
             .tooltiptext {
                 visibility: visible;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 900px) {
-    .calender {
-        .sidebar {
-            .buttons {
-                display: flex;
-                justify-content: space-between;
-                flex-wrap: wrap;
-                gap: 30px;
-                .button, button {
-                    width: revert;
-                    margin: 30px 0 0;
-                }
             }
         }
     }
