Login message toegevoegd

--- a/public/assets/css/calender.css
+++ b/public/assets/css/calender.css
@@ -28,6 +28,11 @@
             margin-top: 1em;
         }
 
+        .login-message{
+            display: inline;
+            color: black;
+        }
+
         .button.item-button, button.item-button {
             width: 100%;
             text-align: center;
