--- a/public/assets/css/swiper.css
+++ b/public/assets/css/swiper.css
@@ -6,7 +6,7 @@
     margin-bottom: 40px;
     border-radius: 25px;
     .swiper-button-prev, .swiper-button-next {
-        top: 50%;
+        top: calc(50% + 20px);
         transform: translateY(-50%);
         width: 40px;
         height: 40px;
