#ag-114 removed easter-egg

--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -46,6 +46,9 @@
                     &.home {
                         background-image: url('../images/icons/MaterialSymbolsLightHome.svg');
                     }
+                    &.profile {
+                        background-image: url('../images/icons/MaterialSymbolsPerson.svg');
+                    }
                 }
 
                 &:after {
