--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -198,6 +198,21 @@
                 justify-content: center;
 
                 .nav-item {
+                    span {
+                        width: fit-content;
+                        height: auto;
+                        background: none;
+                        display: block;
+                        &.home {
+                            background-image: none;
+                            &.home::before {
+                                content: 'Home';
+                                display: inline-block;
+                                font-size: 16px;
+                                color: inherit;
+                            }
+                        }
+                    }
                     .nav-link {
                         text-align: center;
                         color: black !important;
@@ -271,20 +286,6 @@
             padding: 30px 0;
             .nav-item {
                 padding: 0 20px;
-                span {
-                    width: fit-content;
-                    height: auto;
-                    background: none;
-                    display: block;
-                    &.home {
-                        &.home::before {
-                            content: 'Home';
-                            display: inline-block;
-                            font-size: 16px;
-                            color: inherit;
-                        }
-                    }
-                }
             }
         }
     }
