--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -61,6 +61,13 @@
     }
 }
 
+.home{
+    .sidebar{
+        max-width: 400px;
+        min-width: 300px;
+    }
+}
+
 @media only screen and (max-width: 1080px) {
     .details {
         .container {
@@ -90,3 +97,5 @@
         }
     }
 }
+
+
