--- a/public/assets/css/swiper.css
+++ b/public/assets/css/swiper.css
@@ -17,7 +17,6 @@
         justify-content: center;
         padding: 8px;
         transition: background-color 0.3s ease;
-
         &:after {
             font-size: 20px;
             color: var(--default-white);
@@ -60,8 +59,8 @@
 
 .sideslider {
     .swiper-container {
+        max-height:400px;
         height: 100%;
-
     }
 }
 
@@ -72,8 +71,21 @@
 
         .swiper-container {
             margin: 0;
+            max-height: 500px;
+            .swiper-button-prev, .swiper-button-next{
+                visibility:hidden;
+            }
+            .swiper-slide{
+                img{
+                    width:100%;
+                    height:auto;
+                    object-fit:contain;
+                    max-height: 100%;
+                }
+            }
         }
     }
+
 }
 
 .about-us-swiper  {
