ag-135 enhance item location display with italic styling and color adjustment

--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -49,6 +49,10 @@
                             font-size: 14px;
                             font-weight: 700;
                             overflow-wrap: anywhere;
+                            &.detailed {
+                                font-style: italic;
+                                color: var(--default-darkgrey);
+                            }
                         }
                     }
                     .item-body {
