ag-135 added margin-bottom

--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -41,6 +41,7 @@
                     .item-header {
                         width: 100%;
                         height: auto;
+                        margin-bottom: 5px;
                         h3 {
                             font-size: 28px;
                             overflow-wrap: anywhere;
