--- a/public/assets/css/gallery.css
+++ b/public/assets/css/gallery.css
@@ -50,4 +50,14 @@
     }
 }
 
+@media only screen and (max-width: 500px){
+    .gallery-modal {
+        &.show {
+            .modal-body{
+                padding: 0;
+            }
+        }
+    }
+}
+
 
