De image op telefoon is breder en de datum heeft de goede format

--- a/public/assets/css/gallery.css
+++ b/public/assets/css/gallery.css
@@ -24,6 +24,7 @@
 .gallery-modal {
     padding: 0;
     &.show {
+        padding: 0;
         opacity: 1;
         .btn-close {
             border: 0;
